# monty

./: CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
crates/monty-datatest/: Cargo.toml
crates/monty-datatest/src/: main.rs
crates/monty-js/: Cargo.toml  wrapper.ts
crates/monty-js/__test__/: policy.spec.ts
crates/monty-js/src/: lib.rs  monty_cls.rs  policy.rs
crates/monty-macros/src/: from_args.rs
crates/monty-policy/: Cargo.toml
crates/monty-policy/src/: entities.rs  error.rs  lib.rs  request.rs  schema.rs
crates/monty-policy/tests/: policy_engine.rs
crates/monty-python/: Cargo.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi
crates/monty-python/src/: async_dispatch.rs  lib.rs  monty_cls.rs  policy.rs
crates/monty-python/tests/: test_policy.py
crates/monty/src/: expressions.rs  heap.rs  heap_data.rs  intern.rs  parse.rs  prepare.rs  value.rs
crates/monty/src/args/: from_value.rs  mod.rs
crates/monty/src/builtins/: mod.rs  test_cm.rs
crates/monty/src/bytecode/: compiler.rs  op.rs
crates/monty/src/bytecode/vm/: call.rs  context_manager.rs  mod.rs
crates/monty/src/fs/: mod.rs  path_security.rs
crates/monty/src/types/: date.rs  datetime.rs  file.rs  mod.rs  path.rs  py_trait.rs  test_cm.rs  type.rs
crates/monty/test_cases/: arith__float_mod.py  function__err_duplicate_param.py  open__fs.py  with__all.py  with__cm_behaviors.py  with__cm_context_expr_raises_traceback.py  with__cm_enter_raises_traceback.py  with__cm_exit_raises_normal_exit_traceback.py  with__cm_nested_body_raises_traceback.py  with__cm_traceback.py  with__not_context_manager.py
crates/monty/tests/: heap_reader_compile_fail.rs  parse_errors.rs  with_test_cm.rs
limitations/: open.md  with.md
policy-examples/: 01_read_only.py  02_write_restricted.py  03_external_functions.py  04_env_vars.py  05_blocklist_mode.py  06_combined_policy.py  README.md
scripts/: run_traceback.py  test_fixtures.py
